@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 Sober Lemur S.a.s. di Vacondio Andrea
+ * Copyright 2018 Sober Lemur S.r.l.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,7 +41,7 @@ public class ThreadBoundCopiesSupplier<T extends SeekableSource> implements Clos
 
     @Override
     public T get() {
-        return copies.computeIfAbsent(Thread.currentThread().getId(), k -> supplier.get());
+        return copies.computeIfAbsent(Thread.currentThread().threadId(), k -> supplier.get());
 
     }
 
